refs #67 - add authentication prototype
